# cloudflare-ddns-NetworkManager-script

./: .gitignore  .gitignore.orig  README.md  ddns-py.py  ddns.py  pyproject.toml  ruff.toml  test_ddns.py
.github/workflows/: code-style.yml  main.yml  test.yml
