[project]
name = "ddns-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]

[tool.coverage.run]
branch = true
source = ["ddns_py"]

[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "pytest-asyncio>=1.3.0",
    "viztracer>=1.1.1",
]
