[project]
name = "ddns-py"
version = "0.1.0"
description = "Cloudflare DDNS updater for NetworkManager"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
  "coverage[toml]>=7.10.7",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.4.0",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "ruff>=0.15.14",
]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]

[tool.coverage.run]
branch = true
source = ["ddns"]

[tool.pyrefly]
preset = "strict"

[tool.pytest.ini_options]
addopts = ["-q", "--cov=.", "--cov-report=term-missing", "--cov-report=xml"]
python_files = ["test_*.py"]
testpaths = ["."]
